--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.4.2
-python-dotenv==1.0.0
-httpx==0.25.1
+fastapi==0.109.2
+uvicorn==0.27.1
+python-dotenv==1.0.1
+motor==3.3.2
 pymongo==4.6.1
-motor==3.7.0
+aiohttp==3.9.3
+python-multipart==0.0.9
+pydantic>=2.9.2
+pydantic-core>=2.18.2
+pydantic-settings==2.1.0
