--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Environment variables
+.env
+.env.*
+
 # Python
 __pycache__/
 *.py[cod]
@@ -24,7 +28,8 @@ wheels/
 venv/
 env/
 ENV/
-.env
+.venv/
+.env/
 
 # IDE
 .idea/
@@ -36,17 +41,19 @@ ENV/
 # Logs
 *.log
 logs/
-log/
 
 # Local development
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Database
-*.db
 *.sqlite3
+*.db
+
+# Test coverage
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Distribution
+*.tar.gz
+*.zip
 
 # Project specific
 test_data.json
